--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/154/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/154/index.mdx
@@ -8,6 +8,12 @@ unlisted: true
 
 Salut à tous !
 
+Direct links
+
+Recrutement
+
+https://twitter.com/sebastienlorber/status/1686059338647957509
+
 <Todo />
 
 <!-- truncate -->
@@ -34,7 +40,28 @@ Managing or migrating large apps and codebases? This video course covers what yo
 
 ## ⚛️ React {#react}
 
-<Todo />
+- [Partially Controlled Components: A Declarative Design Pattern in React](https://www.jameskerr.blog/posts/partially-controlled-react-components/)
+- [Use svg sprite icons in React](https://www.jacobparis.com/content/svg-icons)
+- [Framer Motion 10.5 - inView API](https://www.framer.com/motion/in-view/) https://twitter.com/mattgperry/status/1684886818314207232
+- [Zustand 4.4](https://github.com/pmndrs/zustand/releases/tag/v4.4.0) https://twitter.com/dai_shi/status/1686199395682021376
+- [Million.js Automatic Mode](https://twitter.com/aidenybai/status/1685710426040832000)
+- RSC parser progress? https://twitter.com/alvarlagerlof/status/1685800749270171648
+- [Understanding React Server Components](https://vercel.com/blog/understanding-react-server-components)
+- [Everything I wish I knew before moving 50,000 lines of code to React Server Components](https://www.mux.com/blog/what-are-react-server-components)
+- [Speeding up the dbt™ docs by 20x with React Server Components](https://dagster.io/blog/dbt-docs-on-react)
+- [Redwood v6](https://github.com/redwoodjs/redwood/releases/tag/v6.0.0) + https://twitter.com/RedwoodJS/status/1686111428384571392
+- [Introducing NextUI Version 2.0](https://nextui.org/blog/nextui-v2) + https://twitter.com/getnextui/status/1686351329055121409)
+- [Remix Error Handling Essentials](https://otiv.dev/blog/essential-remix-error-handling)
+- [Lucia 2.0](https://lucia-auth.com/blog/lucia-2) https://twitter.com/FredKSchott/status/1684243180089380872 https://twitter.com/pilcrowonpaper/status/1684161918830006272
+- [Auto-Form - Automatically creates a @shadcn/ui form based on a zod schema](https://github.com/vantezzen/auto-form)
+- [Shopify’s platform is the Web platform](https://shopify.engineering/shopifys-platform-is-the-web-platform)
+- [Libraries that support React Server Components](https://github.com/reactwg/server-components/discussions/6) + https://twitter.com/leeerob/status/1683897895785725963
+- [The Mysterious Case of the Untracked Clicks](https://profy.dev/article/react-riddles-tracking)
+- [Strongly Type useRef with ElementRef](https://www.totaltypescript.com/strongly-type-useref-with-elementref) + https://twitter.com/sebastienlorber/status/1686046040804233216
+- [10 Essential React Performance Optimization Techniques for Faster Web Applications](https://techreactlearning.blogspot.com/2023/07/10-essential-react-performance.html)
+- [Ports, Adapters, and UI](https://dev.to/bespoyasov/part-3-ports-adapters-and-ui-311b) ???
+- [This Month in React – July 2023](https://podcasters.spotify.com/pod/show/reactiflux/episodes/This-Month-in-React--July-2023-e27ijk5)
+- [Must Know App Router Secret: Promises For Props](https://www.youtube.com/watch?v=ViVa5JPGrf4)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -48,13 +75,13 @@ Managing or migrating large apps and codebases? This video course covers what yo
 
 Hiring front-end developers is hard. 😩 But 4,000+ engineering teams — including at Netflix, Spotify and LinkedIn — have found a better way! 🤠 Skip the algorithm interviews and **run front-end interviews in a fully customizable and collaborative IDE** - where you can:
 
-* drag and drop a React (and Angular or Vue) repo
+- drag and drop a React (and Angular or Vue) repo
 
-* add packages with npm install
+- add packages with npm install
 
-* let candidates use ChatGPT live in the interview
+- let candidates use ChatGPT live in the interview
 
-* watch & share code playback after the interview
+- watch & share code playback after the interview
 
 Use CoderPad to run fast, fair and real coding interviews that candidates and interviewers trust. [Sign up for free today & hire with confidence](https://coderpad.io/?utm_medium=3pmedia&utm_source=ThisWeekInReact&utm_campaign=23-Q3-3PMedia-ThisWeekInReact-ACQ-All-Global-Newsletter).
 
@@ -62,7 +89,14 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- [Measure Hermes engine performance in React Native with Flashlight](https://www.bam.tech/article/measure-hermes-engine-performance-in-react-native-with-flashlight) https://twitter.com/almouro/status/1684535434951503875
+- [How to make a bottom sheet with React Native Reanimated](https://www.youtube.com/watch?v=lYYiuXcTnnE) https://twitter.com/swmansion/status/1684569298289967107
+- [Apple Store - 1/5 of top 100 Sports apps use React-Native](https://twitter.com/Baconbrix/status/1684579413688750082)
+- [Apple - List of APIs that require declared reasons now available](https://developer.apple.com/news/?id=z6fu1dcu) https://twitter.com/mdj_dev/status/1684846827659472896
+- [React-Native now has end-2-end tests](https://twitter.com/SzymonRybczak/status/1684870142839160832)
+- [Realtime object detection — fine-tuning and deploying models for processing video streams](https://blog.swmansion.com/realtime-object-detection-fine-tuning-and-deploying-models-for-processing-video-streams-312f068dbf88) https://twitter.com/swmansion/status/1686002975276187648
+- [VisionCamera 3.0.0-rc.4](https://twitter.com/mrousavy/status/1685963919238615047)
+- [Dynamic imports supported in react native](https://dev.to/dannyhw/dynamic-imports-supported-in-react-native-273j)
 
 ---
 
@@ -94,13 +128,30 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Woodpile - SWC AST visitor in Javascript](https://github.com/kwonoj/woodpile)
+- [New Observable API proposal](https://twitter.com/domfarolino/status/1684921351004430336)
+- [Help Design the Inaugural State of HTML Survey!](https://lea.verou.me/blog/2023/design-state-of-html/)
+- [Core Web Vitals for Search Engine Optimisation: What Do We Need to Know?](https://csswizardry.com/2023/07/core-web-vitals-for-search-engine-optimisation/)
+- [Is Jamstack Officially Finished?](https://remotesynthesis.com/blog/goodbye-jamstack/)
+- [Adapting typography to user preferences with CSS](https://web.dev/adapting-typography-to-user-preferences-with-css/)
+- [ESLint v8.46.0](https://eslint.org/blog/2023/07/eslint-v8.46.0-released/)
+- [New to the web platform in July](https://web.dev/web-platform-07-2023/)
+- [The virtual keyboard API](https://ishadeed.com/article/virtual-keyboard-api/)
+- [dnt — the easiest way to publish a hybrid npm module for ESM and CommonJS](https://deno.com/blog/publish-esm-cjs-module-dnt)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/_jessicasachs/status/1685353609708371968
+
+https://twitter.com/BHolmesDev/status/1684988168431382540
+
+https://twitter.com/trashh_dev/status/1684940967714103296
+
+https://twitter.com/fireship_dev/status/1684324664699674625
+
+https://twitter.com/anuraghazru/status/1684264625494433792
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
