--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/154/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/154/index.mdx
@@ -90,11 +90,8 @@ https://twitter.com/sebastienlorber/status/1686695126465204225
 Hiring front-end developers is hard. 😩 But 4,000+ engineering teams — including at Netflix, Spotify and LinkedIn — have found a better way! 🤠 Skip the algorithm interviews and **run front-end interviews in a fully customizable and collaborative IDE** - where you can:
 
 - drag and drop a React (and Angular or Vue) repo
-
 - add packages with npm install
-
 - let candidates use ChatGPT live in the interview
-
 - watch & share code playback after the interview
 
 Use CoderPad to run fast, fair and real coding interviews that candidates and interviewers trust. [Sign up for free today & hire with confidence](https://coderpad.io/?utm_medium=3pmedia&utm_source=ThisWeekInReact&utm_campaign=23-Q3-3PMedia-ThisWeekInReact-ACQ-All-Global-Newsletter).
@@ -115,7 +112,7 @@ https://twitter.com/almouro/status/1684535434951503875
 
 - 🐦 [Apple Store - 1/5 of top 100 Sports apps use React-Native](https://twitter.com/Baconbrix/status/1684579413688750082)
 - 🐦 [React-Native now has end-2-end tests](https://twitter.com/SzymonRybczak/status/1684870142839160832): l'app officielle RNTester est maintenant testée avec Appium et WebDriver.
-- 📜 [Dynamic imports supported in react native](https://dev.to/dannyhw/dynamic-imports-supported-in-react-native-273j): la feature Webpack `require.context` (permet de faire un import dynamique de dossier) a été portée dans Metro pour les besoins d'Expo Router. Cela permet à [Storybook React-Native 6.5.5](https://github.com/storybookjs/react-native/releases/tag/v6.5.5) de pouvoir créer un index de stories sans étape de codegen, et ouvre d'autres possibilités intéressantes. - https://twitter.com/sebastienlorber/status/1686749957204701184
+- 📜 [Dynamic imports supported in react native](https://dev.to/dannyhw/dynamic-imports-supported-in-react-native-273j): la feature Webpack `require.context` (permet de faire un import dynamique de dossier) a été portée dans Metro pour les besoins d'Expo Router. Cela permet à [Storybook React-Native 6.5.5](https://github.com/storybookjs/react-native/releases/tag/v6.5.5) de pouvoir créer un index de stories sans étape de codegen (en preview), et ouvre d'autres possibilités intéressantes. - https://twitter.com/sebastienlorber/status/1686749957204701184
 - 📜 [Apple - List of APIs that require declared reasons now available](https://developer.apple.com/news/?id=z6fu1dcu): les devs React-Native iOS doivent se préparer à de nouvelles contraintes. https://twitter.com/mdj_dev/status/1684846827659472896
 - 📦 [VisionCamera 3.0.0-rc.4](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.0.0-rc.4): pas mal d'évolutions significatives sur cette RC qui prépare l'arrivée attendue de la v3. https://twitter.com/mrousavy/status/1685963919238615047
 - 🎥 [How to make a bottom sheet with React Native Reanimated](https://www.youtube.com/watch?v=lYYiuXcTnnE) https://twitter.com/swmansion/status/1684569298289967107
@@ -156,7 +153,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🔀 Autre {#other}
 
-- 👀 [New unofficial Observable API proposal](https://twitter.com/domfarolino/status/1684921351004430336)
+- 👀 [New unofficial Observable API proposal](https://github.com/domfarolino/observable)
 - 📊 [Help Design the Inaugural State of HTML Survey!](https://lea.verou.me/blog/2023/design-state-of-html/)
 - 📜 [Core Web Vitals for Search Engine Optimisation](https://csswizardry.com/2023/07/core-web-vitals-for-search-engine-optimisation/)
 - 📜 [Is Jamstack Officially Finished?](https://remotesynthesis.com/blog/goodbye-jamstack/)
